Fix docs navigation overflow

--- a/src/Client/wwwroot/css/site.css
+++ b/src/Client/wwwroot/css/site.css
@@ -762,6 +762,7 @@ background-color: #f7f7f7;
 /* =========================DOCS NAVIGATION======================== */
 nav {
 	position: fixed;
+	width: 21%;
 }
 .blazored-menu .blazored-sub-menu-header div[role=button]{
 	font-weight:bold;
